# simple-rag

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/simple_rag/: __init__.py  main.py
backend/simple_rag/api/: control_plane.py  query.py  schemas.py
backend/simple_rag/config/: __init__.py  settings.py
backend/simple_rag/embeddings/: __init__.py  base.py  local_hf.py  remote.py
backend/simple_rag/ingest/: chunker.py  pipeline.py
backend/simple_rag/rerank/: __init__.py  base.py  local_cross_encoder.py  remote.py
backend/simple_rag/retrieval/: __init__.py  base.py  dense.py  hybrid.py  sparse.py
backend/simple_rag/retrieval/bm25/: __init__.py  engine.py  tokenizer.py
backend/simple_rag/runtime/: __init__.py  providers.py
backend/simple_rag/services/: query_service.py
backend/simple_rag/storage/: __init__.py  documents.py  local.py
backend/simple_rag/utils/: normalize.py
backend/simple_rag/vectorstores/: __init__.py  base.py  pgvector_store.py
configs/: profiles.yaml
docs/: SimpleRAG架构图.drawio  SimpleRAG架构设计.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  query.ts
frontend/src/router/: index.ts
frontend/src/views/: Chunks.vue  Documents.vue  Experiments.vue  Profiles.vue  QueryTest.vue
